# banditkingsofancientspreadsheets.github.io

./: .gitignore  .nojekyll  CNAME  Makefile  README.md  _config.yml  _quarto.yml  _tailwind_utilities.scss  _variables.scss  about.qmd  config.yml  custom.css  custom_theme.scss  index.qmd  listings.json  notes.html  notes.md  package-lock.json  pyproject.toml  robots.txt  search.json  sitemap.xml  theme_dark.scss  theme_light.scss
_includes/: scripts.html
_pages/: about.md  projects.md
_posts/: 2019-05-11-3-Habits-to-Improve-Critical-Thinking.md  2019-08-05-Fast-Excel-with-the-Quick-Access-Toolbar.md  2019-08-05-test.md  2019-10-19-odbc-in-OSX.md  2019-12-28-screen-graphics-and-dashboard-design.md  2020-01-22-How-to-ask-good-data-questions.md  2020-01-26-time-series-forecasting-in-r.md  2020-03-14-How-to-ask-good-data-questions.md  2020-06-30-Quick-PnL-Dataframe.md  2020-07-02-Dash-Bootstrap-KPI-Card.md  2020-08-16-Dash-Clean-Line-Chart.md  2020-11-13-Quick-Bash-Scripting.md  2020-12-28-Tie-Fighter-Error-Charts-in-Python.md  2021-04-16-plotly-in-markdown.md  2021-04-17-plotly-in-markdown.md  2021-05-08-Dev-Environment-in-WSL.md  2021-08-01-Build-Your-First-Plotly-Template.md  2021-08-01-plotly-templates.md
_site/: about.html  index.html  notes.html  search.json  sitemap.xml
banditkings/: README.md  __init__.py  main.py
blog/: 2019-08-05-Fast-Excel-with-the-Quick-Access-Toolbar.md  2019-10-19-odbc-in-osx.md  2020-01-26-time-series-forecasting-in-r.html  2020-01-26-time-series-forecasting-in-r.md  2020-06-30-quick-pnl-dataframe.md  2021-04-16-plotly-in-markdown.md  (+24 more)
(+287 files in other folders)
