[tool.poetry]
name = "banditkings"
version = "0.1.0"
description = ""
authors = ["Nelson Tang <nelson.tang.17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.12,<3.13"
numpy = "^1.24.3"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
fastparquet = "^2023.4.0"
statsmodels = "^0.14.0"
polars = "^1.0"
pyro-ppl = "^1.9.1"
numpyro = "^0.15.2"
pymc = "^5.16.2"
pystan = "^3.10.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
ipykernel = "^6.23.1"
pydantic = "^1.10.7"
pytest = "^8.2.2"
jupyter = "^1.0.0"
nbformat = "^5.8.0"
ipywidgets = "^8.0.6"
openpyxl = "^3.1.2"
pre-commit = "^3.6.1"

[tool.poetry.group.plotly]
optional = true

[tool.poetry.group.plotly.dependencies]
plotly = "^5.14.1"
kaleido = "0.2.1"

[tool.poetry.group.rapids]
optional = true

[tool.poetry.group.rapids.dependencies]
cudf-cu12 = { version = "^24.4", source = "nvidia_pypi" }
dask-cudf-cu12 = { version = "^24.4", source = "nvidia_pypi" }
cuml-cu12 = { version = "^24.4", source = "nvidia_pypi" }
pynvjitlink-cu12 = { version = "^0.1.14", source = "nvidia_pypi" }
pylibraft-cu12 = { version = "^24.4", source = "nvidia_pypi" }

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "nvidia_pypi"
url = "https://pypi.nvidia.com"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
